pty: Add non-linux fallbacks

Apparently BSDs don't allow O_NONBLOCK in posix_openpt, so fall back
to trying without that and applying the flag afterwards.

https://bugzilla.gnome.org/show_bug.cgi?id=759346